# beast_localization

./: CMakeLists.txt  README.md  package.xml
launch/: beast_localization.launch
maps/: checkpoints_2_cylinders.yaml  checkpoints_3_cylinders.yaml  map_1_cylinder.pgm  map_1_cylinder.yaml  map_1_cylinder_thin_walls.pgm  map_2_cylinders.yaml  map_3_cylinders.pgm  map_3_cylinders.yaml  map_no_cylinders.pgm  map_no_cylinders.yaml
